--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+wcc
+CMakeFiles
+CPM_modules
+cmake
+_deps
+cmake_install.cmake
+CMakeCache.txt
+cpm-package-lock.cmake
+Makefile
+
 # Prerequisites
 *.d
 
