--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ project(wcc VERSION 0.1)
 
 add_executable(wcc wcc.cpp)
 
+add_subdirectory(pybind11)
+pybind11_add_module(python_extension python_extension.cpp)
+
 CPMAddPackage("gh:jarro2783/cxxopts@3.1.1")
 target_compile_features(wcc PUBLIC cxx_std_11)
-target_link_libraries(wcc PUBLIC cxxopts::cxxopts)
+target_link_libraries(wcc PUBLIC cxxopts::cxxopts pybind11::pybind11)
